// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return 1 expense with a total of 1200 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $12.00
  </h1>
</div>
`;

exports[`Should return 2 expenses with a total of 80000 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $800.00
  </h1>
</div>
`;
